<resources>
    <string name="app_name">Visualizer00</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_play">Play</string>

    <string name="btn1">Audio Visualizer </string>
    <string name="btn2">Capture Audio</string>
    <string name="btn3">Voice </string>
    <string name="btn4">Text To Speech</string>
    <string name="btn5">XYZ READER</string>
    <string name="btn6">CAPSTONE: MY OWN APP</string>
    <string name="title_activity_voice">VoiceActivity</string>
    <string name="btn_voice">Voice</string>
    <string name="title_activity_text_to_speech">TextToSpeechActivity</string>
    <string name="text_to_speech">Text To Speech</string>
</resources>
